<resources>
    <string name="app_name">Расписание занятий</string>
    <string name="label_time">Время:</string>
    <string name="label_place">Место:</string>
    <string name="label_description">Описание:</string>
    <string name="label_teacher">Преподаватель:</string>
    <string name="default_position">Master-trainer of GP</string>
    <string name="default_name">Smith Helen</string>
    <string name="default_place">Студия</string>
    <string name="default_time">00:00–00:00</string>
    <string name="default_day_of_week">Понедельник</string>
    <string name="default_description">Система упражнений, направленная на растяжку, развитие гибкости и улучшение осанки. ПРОДОЛЖИТЕЛЬНОСТЬ УРОКА 45 мин</string>
    <string name="default_type_of_lesson">Тип занятия</string>
    <string name="image_of_teacher_description">Фото преподавателя</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
</resources>
